# under10KB

./: .gitignore  README.md  build_windows.bat  process_photo.py  pyproject.toml
.github/workflows/: build.yml
